# SPACEtomo

./: README.md  SPACEenvironment.yaml  SPACEenvironment_minimal.yaml  SPACEenvironment_noGPU.yaml  SPACEtomo.py  SPACEtomo_TI.md  SPACEtomo_TI.py  SPACEtomo_config.py  SPACEtomo_functions.py  SPACEtomo_functions_ext.py  SPACEtomo_monitor.py  SPACEtomo_nnUNet.py  SPACEtomo_postAction.py  SPACEtomo_runNapari.py  SPACEtomo_tgt.py  pyproject.toml  setup.py
SPACEtomo/: CLI.py  GUI.py  __init__.py  config.py  run.py  run_manual.py  run_monitor.py  run_nnUNet.py  run_postaction.py  run_prepTargets.py  run_sort.py  setup_config.py  setup_model.py
SPACEtomo/SerialEM_scripts/: SPACEtomo_lamellaDetectionGUI.py  SPACEtomo_manMap.py  SPACEtomo_postAction.py  SPACEtomo_prepareTargets.py  SPACEtomo_run.py  SPACEtomo_run_gui.py  SPACEtomo_targetSelectionGUI.py
SPACEtomo/modules/: buf.py  ext.py  geo.py  ima.py  lisc.py  mma.py  mod_wg.py  mrc.py  nav.py  scope.py  sem.py  tgt.py  utils.py  utils_sem.py
SPACEtomo/modules/dummy/: __init__.py  buf.py  scope.py  serialem.py  utils_sem.py
SPACEtomo/modules/gui/: flm.py  gui.py  info.py  lam_sel.py  map.py  menu.py  plot.py  set.py  tgt_sel.py  thmb.py
docs/: SPACEtomo_TI.md  model_info.md  package_list.md
tests/: conftest.py  test_nav.py  test_run.py  test_tgt.py  test_utils.py
